Changes of Geoportale3D version.

--- a/lib/Sass/common/_buttons.scss
+++ b/lib/Sass/common/_buttons.scss
@@ -26,7 +26,8 @@ $btn-setting-size: 35px;
     box-shadow: none;
     border-color: transparent;
     outline: none;
-    opacity: 0.9;
+    opacity: 0.75;
+    background: lighten($color-primary, 10%);
   }
 }
 
