--- a/lib/ReactViews/Map/terria-viewer-wrapper.scss
+++ b/lib/ReactViews/Map/terria-viewer-wrapper.scss
@@ -32,7 +32,8 @@
 
       a {
         text-decoration: none;
-        color: $color-primary;
+        //color: $color-primary;
+        color: white;
       }
     }
 
