Added features to SharePanel to save a map screenshot or map config to file on local disk and to restore map config from a file.

--- a/lib/ReactViews/Map/Panels/SharePanel/share-panel.scss
+++ b/lib/ReactViews/Map/Panels/SharePanel/share-panel.scss
@@ -26,6 +26,11 @@
   composes: btn--share from '../../../../Sass/common/_buttons.scss';
 }
 
+.button {
+  composes: btn from '../../../../Sass/common/_buttons.scss';
+  composes: btn-primary from '../../../../Sass/common/_buttons.scss';
+}
+
 .img--share {
   width: 100%;
   height: $share-panel-width / 4*3;
