Changed link color to be more readable.

--- a/lib/Sass/common/_variables.scss
+++ b/lib/Sass/common/_variables.scss
@@ -27,20 +27,20 @@ $text-light: #FFFFFF;
 $text-light-dimmed: #BBBBBB;
 
 // You can override these functions to change the link color depending on the background, eg.
-// @function get-link-color($bg-color) {
-//   @if (lightness($bg-color) > 50) {
-//     @return $text-dark; // Dark color needed on a light background
-//   } @else {
-//     @return $text-light; // Light color needed on a dark background
-//   }
-// }
-// It would make sense to extend this approach to all text and button coloring.
 @function get-link-color($bg-color) {
+  @if (lightness($bg-color) > 50) {
+    @return $text-dark; // Dark color needed on a light background
+  } @else {
+    @return $text-light; // Light color needed on a dark background
+  }
+}
+// It would make sense to extend this approach to all text and button coloring.
+/*@function get-link-color($bg-color) {
   @if variable-exists(text-link) {
   	@return $text-link;
   }
   @return $color-primary;
-}
+}*/
 @function get-visited-link-color($bg-color) {
   @if variable-exists(text-visited-link) {
   	@return $text-visited-link;
@@ -51,7 +51,7 @@ $text-light-dimmed: #BBBBBB;
 $faint-bg: #f5f5f5;
 $warning: #FF5B6F;
 $info-color: #FED17F;
-$link-text-decoration: none;
+$link-text-decoration: underline;
 
 $padding: 10px;
 $padding-small: 5px;
