Working on calculation of elevation of WFS polylines.

--- a/lib/ReactViews/FeatureInfo/feature-info-download.scss
+++ b/lib/ReactViews/FeatureInfo/feature-info-download.scss
@@ -23,6 +23,7 @@
 
 .dropdown__list {
   display: flex;
+  background-color: $dark-lighter;
   li a {
     @if variable-exists(text-link) {
       color: $text-link;
