--- a/lib/ReactViews/Workbench/workbench-list.scss
+++ b/lib/ReactViews/Workbench/workbench-list.scss
@@ -4,7 +4,7 @@
   composes: list-reset from '../../Sass/common/_base.scss';
   composes: scrollbars from '../../Sass/common/_base.scss';
   position: relative;
-  height: calc(100vh - #{$workbench-header + $logo-height});
+  height: calc(100vh - #{$workbench-header + $logo-height + $chart-height});
   overflow-x: hidden;
   overflow-y: auto;
   padding: 0 $padding-small;
