--- a/lib/ReactViews/Custom/Chart/chart-preview.scss
+++ b/lib/ReactViews/Custom/Chart/chart-preview.scss
@@ -13,7 +13,7 @@
 
     .line-chart text {
       fill: $feature-info-color;
-      // font-family: monospace;
+      // font-family: $font-mono;
     }
 
     .units-label-shadow {
