--- a/lib/ReactViews/Map/splitter.scss
+++ b/lib/ReactViews/Map/splitter.scss
@@ -28,7 +28,7 @@
     left: 50%;
     top: 50%;
     font-size: 28px;
-    font-family: monospace;
+    font-family: $font-mono;
     background-color: white;
     color: grey;
     margin-top: -20px;
